# pytest-django-test

./: README.md  pyproject.toml
myfirst/myfirst/: settings.py  urls.py
myfirst/polls/: models.py  test_polls.py  views.py
myfirst/polls/migrations/: 0001_initial.py
myfirst/polls/templates/polls/: detail.html  index.html  results.html
tests/: test_polls.py
