[tool.poetry]
name = "django-01"
version = "0.1.0"
description = ""
authors = ["chbndrhnns <chbndrhnns@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "django_01"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.3.1"
pytest-django = "^4.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
